@@ -12,6 +12,7 @@ version 1.0.0:
 	  over AIM (Dave West)
 
 	Bug Fixes:
+	* Work around window manager stupidity with new dialog windows (Dave West)
 	* Compile with gtk 2.5.x (Gary Kramlich)
 	* Escape invalid characters in log names (Daniel Atallah)
 	* Fix for clicking add in an msn chat with 2 or more people in your buddy
